fix grid overflow

--- a/styles/core/_grid.scss
+++ b/styles/core/_grid.scss
@@ -42,5 +42,6 @@
   &.col--grow {
     flex: 1;
     flex-grow: 1;
+    overflow: auto
   }
 }
